; ModuleID = '/home/carl/AnghaBench/HandBrake/gtk/src/extr_queuehandler.c_list_box_get_row.c'
source_filename = "/home/carl/AnghaBench/HandBrake/gtk/src/extr_queuehandler.c_list_box_get_row.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GTK_TYPE_LIST_BOX_ROW = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*)* @list_box_get_row to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @list_box_get_row(i32* %0) #0 {
  %2 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  br label %3

3:                                                ; preds = %13, %1
  %4 = load i32*, i32** %2, align 8
  %5 = icmp ne i32* %4, null
  br i1 %5, label %6, label %11

6:                                                ; preds = %3
  %7 = load i32*, i32** %2, align 8
  %8 = call i64 @G_OBJECT_TYPE(i32* %7)
  %9 = load i64, i64* @GTK_TYPE_LIST_BOX_ROW, align 8
  %10 = icmp ne i64 %8, %9
  br label %11

11:                                               ; preds = %6, %3
  %12 = phi i1 [ false, %3 ], [ %10, %6 ]
  br i1 %12, label %13, label %16

13:                                               ; preds = %11
  %14 = load i32*, i32** %2, align 8
  %15 = call i32* @gtk_widget_get_parent(i32* %14)
  store i32* %15, i32** %2, align 8
  br label %3

16:                                               ; preds = %11
  %17 = load i32*, i32** %2, align 8
  %18 = call i32* @GTK_LIST_BOX_ROW(i32* %17)
  ret i32* %18
}

declare dso_local i64 @G_OBJECT_TYPE(i32*) #1

declare dso_local i32* @gtk_widget_get_parent(i32*) #1

declare dso_local i32* @GTK_LIST_BOX_ROW(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
